# httpfs

./: CMakeLists.txt
extension/httpfs/: README.md  create_secret_functions.cpp  crypto.cpp  httpfs.cpp  httpfs_client.cpp  httpfs_client_wasm.cpp  httpfs_extension.cpp  s3fs.cpp
extension/httpfs/include/: httpfs.hpp  s3fs.hpp
